--- a/src/app/sslmainwindow.ui
+++ b/src/app/sslmainwindow.ui
@@ -717,6 +717,19 @@
             <string>Test cert and key match</string>
            </property>
           </widget>
+          <widget class="QPushButton" name="pushButtonSignCert">
+           <property name="geometry">
+            <rect>
+             <x>270</x>
+             <y>40</y>
+             <width>75</width>
+             <height>23</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Sign</string>
+           </property>
+          </widget>
          </widget>
         </item>
         <item>
